Add tests under router-bgp-evpn.

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -342,6 +342,9 @@ router bgp {{ router_bgp.as }}
 {%         if neighbor.weight is arista.avd.defined %}
    neighbor {{ neighbor.ip_address }} weight {{ neighbor.weight }}
 {%         endif %}
+{%         if neighbor.shared_secret_profile_name is arista.avd.defined and neighbor.hash_algorithm is arista.avd.defined %}
+   neighbor {{ neighbor.ip_address }} password shared-secret profile {{ neighbor.shared_secret_profile_name }} algorithm {{ neighbor.hash_algorithm }}
+{%         endif %}
 {%         if neighbor.session_tracker is arista.avd.defined() %}
    neighbor {{ neighbor.ip_address }} session tracker {{ neighbor.session_tracker }}
 {%         endif %}
