--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -198,8 +198,8 @@ router bgp {{ router_bgp.as }}
 {%         if peer_group.passive is arista.avd.defined(true) %}
    neighbor {{ peer_group.name }} passive
 {%         endif %}
-{%         if peer_group.shared_secret_profile_name is arista.avd.defined and peer_group.hash_algorithm is arista.avd.defined %}
-   neighbor {{ peer_group.name }} password shared-secret profile {{ peer_group.shared_secret_profile_name }} algorithm {{ peer_group.hash_algorithm }}
+{%         if peer_group.shared_secret.shared_secret_profile_name is arista.avd.defined and peer_group.shared_secret.hash_algorithm is arista.avd.defined %}
+   neighbor {{ peer_group.name }} password shared-secret profile {{ peer_group.shared_secret.shared_secret_profile_name }} algorithm {{ peer_group.shared_secret.hash_algorithm }}
 {%         endif %}
 {%         if peer_group.session_tracker is arista.avd.defined %}
    neighbor {{ peer_group.name }} session tracker {{ peer_group.session_tracker }}
@@ -342,8 +342,8 @@ router bgp {{ router_bgp.as }}
 {%         if neighbor.weight is arista.avd.defined %}
    neighbor {{ neighbor.ip_address }} weight {{ neighbor.weight }}
 {%         endif %}
-{%         if neighbor.shared_secret_profile_name is arista.avd.defined and neighbor.hash_algorithm is arista.avd.defined %}
-   neighbor {{ neighbor.ip_address }} password shared-secret profile {{ neighbor.shared_secret_profile_name }} algorithm {{ neighbor.hash_algorithm }}
+{%         if neighbor.shared_secret.shared_secret_profile_name is arista.avd.defined and neighbor.shared_secret.hash_algorithm is arista.avd.defined %}
+   neighbor {{ neighbor.ip_address }} password shared-secret profile {{ neighbor.shared_secret.shared_secret_profile_name }} algorithm {{ neighbor.shared_secret.hash_algorithm }}
 {%         endif %}
 {%         if neighbor.session_tracker is arista.avd.defined() %}
    neighbor {{ neighbor.ip_address }} session tracker {{ neighbor.session_tracker }}
