--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
@@ -40,13 +40,12 @@ router segment-security
             match interface {{ entry }}
 {%                 endfor %}
 {%                 if segment.definition.match_lists is arista.avd.defined %}
-{%                     for entry in segment.definition.match_lists | arista.avd.natural_sort('name') %}
-{%                         if entry.covered is arista.avd.defined(true) %}
-{%                             set host_cli = "match covered prefix-list " %}
-{%                         else %}
-{%                             set host_cli = "match prefix-" %}
+{%                     for entry in segment.definition.match_lists %}
+{%                         if entry.prefix is arista.avd.defined %}
+{%                             set host_cli = "match prefix-" ~ entry.address_family ~ " " ~ entry.prefix %}
+{%                         elif entry.covered_prefix_list is arista.avd.defined %}
+{%                             set host_cli = "match covered prefix-list " ~ entry.address_family ~ " " ~ entry.covered_prefix_list %}
 {%                         endif %}
-{%                         set host_cli = host_cli ~ entry.address_family ~ " " ~ entry.name %}
             {{ host_cli }}
 {%                     endfor %}
 {%                 endif %}
