--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -612,10 +612,10 @@ router bgp {{ router_bgp.as }}
       neighbor {{ peer_group.name }} route-map {{ peer_group.route_map_out }} out
 {%             endif %}
 {%             if peer_group.rcf_in is arista.avd.defined %}
-      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}()
+      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}
 {%             endif %}
 {%             if peer_group.rcf_out is arista.avd.defined %}
-      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}()
+      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}
 {%             endif %}
 {%             if peer_group.activate is arista.avd.defined(true) %}
       neighbor {{ peer_group.name }} activate
@@ -652,10 +652,10 @@ router bgp {{ router_bgp.as }}
       no neighbor {{ neighbor.ip_address }} activate
 {%             endif %}
 {%             if neighbor.rcf_in is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}()
+      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}
 {%             endif %}
 {%             if neighbor.rcf_out is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}()
+      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
 {%             endif %}
 {%         endfor %}
 {%         if router_bgp.address_family_evpn.next_hop.resolution_disabled is arista.avd.defined(true) %}
@@ -761,10 +761,10 @@ router bgp {{ router_bgp.as }}
       neighbor {{ peer_group.name }} route-map {{ peer_group.route_map_out }} out
 {%             endif %}
 {%             if peer_group.rcf_in is arista.avd.defined %}
-      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}()
+      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}
 {%             endif %}
 {%             if peer_group.rcf_out is arista.avd.defined %}
-      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}()
+      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}
 {%             endif %}
 {%             if peer_group.prefix_list_in is arista.avd.defined %}
       neighbor {{ peer_group.name }} prefix-list {{ peer_group.prefix_list_in }} in
@@ -805,10 +805,10 @@ router bgp {{ router_bgp.as }}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%             endif %}
 {%             if neighbor.rcf_in is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}()
+      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}
 {%             endif %}
 {%             if neighbor.rcf_out is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}()
+      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
 {%             endif %}
 {%             if neighbor.prefix_list_in is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_in }} in
@@ -849,7 +849,7 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
 {%                 if redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
 {%                     if redistribute_route.rcf is arista.avd.defined %}
-{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf ~ "()" %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
 {%                     endif %}
 {%                 endif %}
       {{ redistribute_route_cli }}
@@ -939,10 +939,10 @@ router bgp {{ router_bgp.as }}
       neighbor {{ peer_group.name }} route-map {{ peer_group.route_map_out }} out
 {%             endif %}
 {%             if peer_group.rcf_in is arista.avd.defined %}
-      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}()
+      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}
 {%             endif %}
 {%             if peer_group.rcf_out is arista.avd.defined %}
-      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}()
+      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}
 {%             endif %}
 {%             if peer_group.prefix_list_in is arista.avd.defined %}
       neighbor {{ peer_group.name }} prefix-list {{ peer_group.prefix_list_in }} in
@@ -964,10 +964,10 @@ router bgp {{ router_bgp.as }}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%             endif %}
 {%             if neighbor.rcf_in is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}()
+      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}
 {%             endif %}
 {%             if neighbor.rcf_out is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}()
+      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
 {%             endif %}
 {%             if neighbor.prefix_list_in is arista.avd.defined %}
       neighbor {{ neighbor.ip_address }} prefix-list {{ neighbor.prefix_list_in }} in
@@ -1000,7 +1000,7 @@ router bgp {{ router_bgp.as }}
 {%                     set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
 {%                 elif redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
 {%                     if redistribute_route.rcf is arista.avd.defined %}
-{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf ~ "()" %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
 {%                     endif %}
 {%                 endif %}
       {{ redistribute_route_cli }}
