--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-bgp.j2
@@ -421,7 +421,7 @@ router bgp {{ router_bgp.as }}
 {%                 set redistribute_route_cli = redistribute_route_cli ~ " route-map " ~ redistribute_route.route_map %}
 {%             elif redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
 {%                 if redistribute_route.rcf is arista.avd.defined %}
-{%                     set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf ~ "()" %}
+{%                     set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
 {%                 endif %}
 {%             endif %}
    {{ redistribute_route_cli }}
@@ -1139,10 +1139,10 @@ router bgp {{ router_bgp.as }}
       neighbor {{ peer_group.name }} route-map {{ peer_group.route_map_out }} out
 {%             endif %}
 {%             if peer_group.rcf_in is arista.avd.defined %}
-      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}()
+      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}
 {%             endif %}
 {%             if peer_group.rcf_out is arista.avd.defined %}
-      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}()
+      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}
 {%             endif %}
 {%         endfor %}
 {%         for neighbor in router_bgp.address_family_vpn_ipv4.neighbors | arista.avd.natural_sort('ip_address') %}
@@ -1158,10 +1158,10 @@ router bgp {{ router_bgp.as }}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%             endif %}
 {%             if neighbor.rcf_in is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}()
+      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}
 {%             endif %}
 {%             if neighbor.rcf_out is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}()
+      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
 {%             endif %}
 {%         endfor %}
 {%         if router_bgp.address_family_vpn_ipv4.neighbor_default_encapsulation_mpls_next_hop_self.source_interface is arista.avd.defined %}
@@ -1180,7 +1180,7 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
 {%                 if redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
 {%                     if redistribute_route.rcf is arista.avd.defined %}
-{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf ~ "()" %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
 {%                     endif %}
 {%                 endif %}
       {{ redistribute_route_cli }}
@@ -1207,10 +1207,10 @@ router bgp {{ router_bgp.as }}
       neighbor {{ peer_group.name }} route-map {{ peer_group.route_map_out }} out
 {%             endif %}
 {%             if peer_group.rcf_in is arista.avd.defined %}
-      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}()
+      neighbor {{ peer_group.name }} rcf in {{ peer_group.rcf_in }}
 {%             endif %}
 {%             if peer_group.rcf_out is arista.avd.defined %}
-      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}()
+      neighbor {{ peer_group.name }} rcf out {{ peer_group.rcf_out }}
 {%             endif %}
 {%         endfor %}
 {%         for neighbor in router_bgp.address_family_vpn_ipv6.neighbors | arista.avd.natural_sort('ip_address') %}
@@ -1226,10 +1226,10 @@ router bgp {{ router_bgp.as }}
       neighbor {{ neighbor.ip_address }} route-map {{ neighbor.route_map_out }} out
 {%             endif %}
 {%             if neighbor.rcf_in is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}()
+      neighbor {{ neighbor.ip_address }} rcf in {{ neighbor.rcf_in }}
 {%             endif %}
 {%             if neighbor.rcf_out is arista.avd.defined %}
-      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}()
+      neighbor {{ neighbor.ip_address }} rcf out {{ neighbor.rcf_out }}
 {%             endif %}
 {%         endfor %}
 {%         if router_bgp.address_family_vpn_ipv6.neighbor_default_encapsulation_mpls_next_hop_self.source_interface is arista.avd.defined %}
@@ -1248,7 +1248,7 @@ router bgp {{ router_bgp.as }}
 {%                 endif %}
 {%                 if redistribute_route.source_protocol in ["connected", "static", "isis", "user", "dynamic"] %}
 {%                     if redistribute_route.rcf is arista.avd.defined %}
-{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf ~ "()" %}
+{%                         set redistribute_route_cli = redistribute_route_cli ~ " rcf " ~ redistribute_route.rcf %}
 {%                     endif %}
 {%                 endif %}
       {{ redistribute_route_cli }}
