--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-general.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-general.j2
@@ -43,12 +43,14 @@ router general
    control-functions
 {%         if router_general.control_functions.code_units is arista.avd.defined %}
 {%             for code_unit in router_general.control_functions.code_units | arista.avd.natural_sort('name') %}
-{%                 set content = code_unit.content %}
-{%                 if not content.rstrip().endswith('\nEOF') %}
-{%                     set content = content.rstrip() + "\nEOF" %}
-{%                 endif %}
+{%                 if code_unit.content is arista.avd.defined %}
+{%                     set content = code_unit.content %}
+{%                     if not content.rstrip().endswith('\nEOF') %}
+{%                         set content = content.rstrip() + "\nEOF" %}
+{%                     endif %}
       code unit {{ code_unit.name }}
          {{ content | indent(width=9, first=False) }}
+{%                 endif %}
 {%             endfor %}
 {%         endif %}
    !
