--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-segment-security.j2
@@ -12,21 +12,33 @@ router segment-security
 {%     endif %}
 {%     if router_segment_security.policies is arista.avd.defined %}
 {%         for policy in router_segment_security.policies %}
+{%             if policy.name is arista.avd.defined %}
    !
    policy {{ policy.name }}
-{%             for sequence in policy.sequence_numbers | arista.avd.natural_sort('sequence') %}
-{%                 set eos_cli = sequence.action %}
-{%                 if sequence.action == "redirect" %}
-{%                     set eos_cli = eos_cli ~ " next-hop " ~ sequence.next_hop %}
-{%                 endif %}
-{%                 if sequence.stateless | arista.avd.default(true) %}
-{%                     set eos_cli = eos_cli ~ " stateless" %}
-{%                 endif %}
-{%                 if sequence.log is arista.avd.defined(true) %}
-{%                     set eos_cli = eos_cli ~ " log" %}
-{%                 endif %}
+{%                 if policy.sequence_numbers is arista.avd.defined %}
+{%                     for sequence in policy.sequence_numbers | arista.avd.natural_sort('sequence') %}
+{%                         if sequence.sequence is arista.avd.defined and sequence.action is arista.avd.defined and sequence.application is arista.avd.defined %}
+{%                             set eos_cli = sequence.action %}
+{%                             if sequence.action == "redirect" %}
+{%                                 if sequence.next_hop is arista.avd.defined %}
+{%                                     set eos_cli = eos_cli ~ " next-hop " ~ sequence.next_hop %}
+{%                                 else %}
+{%                                     set eos_cli = "BAD!" %}
+{%                                 endif %}
+{%                             endif %}
+{%                             if sequence.stateless | arista.avd.default(true) %}
+{%                                 set eos_cli = eos_cli ~ " stateless" %}
+{%                             endif %}
+{%                             if sequence.log is arista.avd.defined(true) %}
+{%                                 set eos_cli = eos_cli ~ " log" %}
+{%                             endif %}
+{%                             if eos_cli != "BAD!" %}
       {{ sequence.sequence }} application {{ sequence.application }} action {{ eos_cli }}
-{%             endfor %}
+{%                             endif %}
+{%                         endif %}
+{%                     endfor %}
+{%                 endif %}
+{%             endif %}
 {%         endfor %}
 {%     endif %}
 {%     if router_segment_security.vrfs is arista.avd.defined %}
@@ -34,26 +46,34 @@ router segment-security
    !
    vrf {{ vrf.name }}
 {%             for segment in vrf.segments %}
+{%                 if segment.name is arista.avd.defined %}
       segment {{ segment.name }}
          definition
-{%                 for entry in segment.definition.interfaces | arista.avd.natural_sort %}
+{%                     for entry in segment.definition.interfaces | arista.avd.natural_sort %}
             match interface {{ entry }}
-{%                 endfor %}
-{%                 if segment.definition.match_lists is arista.avd.defined %}
-{%                     for entry in segment.definition.match_lists %}
-{%                         if entry.prefix is arista.avd.defined %}
-{%                             set host_cli = "match prefix-" ~ entry.address_family ~ " " ~ entry.prefix %}
-{%                         elif entry.covered_prefix_list is arista.avd.defined %}
-{%                             set host_cli = "match covered prefix-list " ~ entry.address_family ~ " " ~ entry.covered_prefix_list %}
-{%                         endif %}
-            {{ host_cli }}
 {%                     endfor %}
-{%                 endif %}
+{%                     if segment.definition.match_lists is arista.avd.defined %}
+{%                         for entry in segment.definition.match_lists %}
+{%                             if entry.address_family is arista.avd.defined and (entry.prefix is arista.avd.defined or entry.covered_prefix_list is arista.avd.defined ) %}
+{%                                 if entry.prefix is arista.avd.defined %}
+{%                                     set host_cli = "match prefix-" ~ entry.address_family ~ " " ~ entry.prefix %}
+{%                                 elif entry.covered_prefix_list is arista.avd.defined %}
+{%                                     set host_cli = "match covered prefix-list " ~ entry.address_family ~ " " ~ entry.covered_prefix_list %}
+{%                                 endif %}
+            {{ host_cli }}
+{%                             endif %}
+{%                         endfor %}
+{%                     endif %}
+{%                     if segment.policies is arista.avd.defined %}
          !
          policies
-{%                 for entry in segment.policies | arista.avd.natural_sort('name') %}
+{%                         for entry in segment.policies | arista.avd.natural_sort('source') %}
+{%                             if entry.source is arista.avd.defined and entry.policy is arista.avd.defined %}
             from {{ entry.source }} policy {{ entry.policy }}
-{%                 endfor %}
+{%                             endif %}
+{%                         endfor %}
+{%                     endif %}
+{%                 endif %}
 {%             endfor %}
 {%         endfor %}
 {%     endif %}
