--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-isis.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/eos/router-isis.j2
@@ -78,11 +78,14 @@ router isis {{ router_isis.instance }}
    advertise passive-only
 {%     endif %}
 {%     if router_isis.spf_interval.interval is arista.avd.defined %}
+{%         set spf_interval_cli = "spf-interval " ~ router_isis.spf_interval.interval %}
 {%         if router_isis.spf_interval.wait_interval is arista.avd.defined %}
-   spf-interval {{ router_isis.spf_interval.interval }} {{ router_isis.spf_interval.wait_interval }}
-{%         else %}
-   spf-interval {{ router_isis.spf_interval.interval }}
+{%             set spf_interval_cli = spf_interval_cli ~ " " ~ router_isis.spf_interval.wait_interval %}
+{%             if router_isis.spf_interval.hold_interval is arista.avd.defined %}
+{%                 set spf_interval_cli = spf_interval_cli ~ " " ~ router_isis.spf_interval.hold_interval %}
+{%             endif %}
 {%         endif %}
+   {{ spf_interval_cli }}
 {%     endif %}
 {%     if router_isis.authentication.both.mode is arista.avd.defined
           and (router_isis.authentication.both.mode in ["md5", "text"]
