--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ip-nat.j2
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/templates/documentation/ip-nat.j2
@@ -162,7 +162,7 @@ NAT profile VRF is: {{ profile.vrf }}
 | Setting | Value |
 | -------- | ----- |
 {%         if ip_nat.synchronization.shutdown | arista.avd.default(false) %}
-| State | Disabled !
+| State | Disabled |
 {%         else %}
 | State | Enabled !
 {%         endif %}
